refactor: migrate overlays to editor-replacing components
- processes, planning, usage now render as full-screen views
- remove tui-utils package, inline box renderer in the-dumb-zone
- delete processes build script and dist folder
- cap UI heights to match original overlay sizes
- use dim borders for subtler appearance

--- a/src/package.json
+++ b/src/package.json
@@ -11,20 +11,19 @@
   ],
   "pi": {
     "extensions": [
-      "./dist/index.ts"
+      "./index.ts"
     ]
   },
   "publishConfig": {
     "access": "public"
   },
   "files": [
-    "dist",
+    "*.ts",
+    "commands",
+    "hooks",
+    "tools",
     "README.md"
   ],
-  "scripts": {
-    "build": "tsx ../../scripts/build-processes.ts",
-    "prepack": "pnpm run build"
-  },
   "dependencies": {
     "@sinclair/typebox": "^0.34.41"
   },
