fix: add repository field to root and pi-processes packages

--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,10 @@
     "pi",
     "processes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aliou/pi-extensions"
+  },
   "pi": {
     "extensions": [
       "./index.ts"
