feat: add preview videos to package.json for pi package browser

--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,8 @@
   "pi": {
     "extensions": [
       "./index.ts"
-    ]
+    ],
+    "video": "https://assets.aliou.me/pi-extensions/2026-01-26-processes-demo.mp4"
   },
   "publishConfig": {
     "access": "public"
