--- a/src/package.json
+++ b/src/package.json
@@ -33,8 +33,6 @@
     "@sinclair/typebox": "^0.34.41"
   },
   "peerDependencies": {
-    "@mariozechner/pi-ai": "0.51.0",
-    "@mariozechner/pi-coding-agent": "0.51.0",
-    "@mariozechner/pi-tui": "0.51.0"
+    "@mariozechner/pi-coding-agent": ">=0.51.0"
   }
 }
