feat(processes): rename to process, add commands, settings, auto-stream
- Rename tool 'processes' -> 'process', commands /processes -> /process:*
- /process:list: full process manager UI (registered first)
- /process:stream: stream logs widget, auto-pick if single running
- /process:logs: show log file paths with picker
- /process:kill: kill running process with picker
- /process:clear: clear finished processes
- /process:settings: configurable output, widget, process list options
- Auto-stream logs widget on successful process start
- ProcessPickerComponent for interactive selection
- All commands autocomplete on process id/name

--- a/src/package.json
+++ b/src/package.json
@@ -25,11 +25,15 @@
   "files": [
     "*.ts",
     "commands",
+    "components",
+    "constants",
     "hooks",
     "tools",
+    "utils",
     "README.md"
   ],
   "dependencies": {
+    "@aliou/pi-utils-settings": "workspace:*",
     "@sinclair/typebox": "^0.34.41"
   },
   "peerDependencies": {
