--- a/src/package.json
+++ b/src/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "@aliou/pi-utils-settings": "workspace:*",
+    "@aliou/pi-utils-ui": "workspace:^",
     "@sinclair/typebox": "^0.34.41"
   },
   "peerDependencies": {
