fix: mark pi SDK peer deps as optional

--- a/package.json
+++ b/package.json
@@ -62,5 +62,10 @@
     "version": "changeset version",
     "release": "pnpm changeset publish"
   },
-  "packageManager": "pnpm@10.26.1"
+  "packageManager": "pnpm@10.26.1",
+  "peerDependenciesMeta": {
+    "@mariozechner/pi-coding-agent": {
+      "optional": true
+    }
+  }
 }
