--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@aliou/pi-utils-settings": "^0.4.0",
     "@aliou/pi-utils-ui": "^0.1.0",
+    "@aliou/sh": "^0.1.0",
     "@sinclair/typebox": "^0.34.41"
   },
   "peerDependencies": {
