--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mariozechner/pi-tui": ">=0.51.0"
   },
   "devDependencies": {
+    "@aliou/biome-plugins": "^0.3.2",
     "@aliou/pi-evals": "^0.3.0",
     "@biomejs/biome": "^2.3.13",
     "@changesets/cli": "^2.27.11",
@@ -58,6 +59,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "biome check",
     "format": "biome check --write",
+    "check:lockfile": "pnpm install --frozen-lockfile --ignore-scripts",
     "prepare": "[ -d .git ] && husky || true",
     "changeset": "changeset",
     "version": "changeset version",
